--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
           <div class="bg-holder  bottom-0" style="background-image:url(assets/img/hero/background.png);background-position: bottom;">
           </div>
           <div class="container overflow-hidden text-center pt-9 pb-10 z-index-1"><img class="mb-4" src="assets/img/hero/final.png" alt="" width="179.39px" /><br /><img src="assets/img/hero/100.png" alt="" width="901px" position="relative" />
-            <p class="text-white fw-semi-bold fs-11 font-nunito">HTML5 template collection <span class="text-info fw-bold">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 mb-5 font-nunito fw-normal"><i class="fas fa-download me-3"></i>Download Free(25mb)</a>
+            <p class="text-white fw-semi-bold fs-11 font-nunito">HTML5 template collection <span class="text-info fw-bold">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 mb-5 font-nunito fw-normal" href="https://themewagon.com/" target="_blank"><i class="fas fa-download me-3"></i>Download Free(25mb)</a>
           </div>
           <!--/.bg-holder-->
 
@@ -91,12 +91,28 @@
             </ul>
           </nav><a class="back-to-top bg-info" href="#"><i class="fas fa-angle-double-up"> </i></a>
           <div class="row mt-4 grid">
-            <div class="col-lg-4 col-6 mb-3 item admin"><a class="text-decoration-none" href="https://demos.themeselection.com/materio-mui-react-nextjs-admin-template-free/" data-category="admin">
+            <div class="col-lg-4 col-6 mb-3 item miscellaneous"><a class="text-decoration-none" href="https://themewagon.github.io/Cycle/" data-category="miscellaneous">
                 <div class="card mb-2 bg-white card-showcase">
                   <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">Materio</h4>
-                    <div class="card-text text-dark">Admin &amp; DashBoard</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img01.png" alt="Feature" />
+                    <h4 class="card-title fw-bold text-success mb-0">Cycle</h4>
+                    <div class="card-text text-dark">Miscellaneous</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img95.png" alt="Feature" />
+                </div>
+              </a></div>
+            <div class="col-lg-4 col-6 mb-3 item landing"><a class="text-decoration-none" href="https://themewagon.github.io/motto/" data-category="landing">
+                <div class="card mb-2 bg-white card-showcase">
+                  <div class="card-body text-center">
+                    <h4 class="card-title fw-bold text-success mb-0">Motto</h4>
+                    <div class="card-text text-dark">Landing Pages</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img58.png" alt="Feature" />
+                </div>
+              </a></div>
+            <div class="col-lg-4 col-6 mb-3 item miscellaneous"><a class="text-decoration-none" href="https://themewagon.github.io/productly/v1.0.0/" data-category="miscellaneous">
+                <div class="card mb-2 bg-white card-showcase">
+                  <div class="card-body text-center">
+                    <h4 class="card-title fw-bold text-success mb-0">Productly</h4>
+                    <div class="card-text text-dark">Miscellaneous</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img19.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item business"><a class="text-decoration-none" href="https://themewagon.github.io/woody/" data-category="business">
@@ -105,6 +121,22 @@
                     <h4 class="card-title fw-bold text-success mb-0">Woody </h4>
                     <div class="card-text text-dark">Business</div>
                   </div><img class="card-img-bottom" src="assets/img/template/img02.png" alt="Feature" />
+                </div>
+              </a></div>
+            <div class="col-lg-4 col-6 mb-3 item landing"><a class="text-decoration-none" href="https://themewagon.github.io/FestavaLive/" data-category="landing">
+                <div class="card mb-2 bg-white card-showcase">
+                  <div class="card-body text-center">
+                    <h4 class="card-title fw-bold text-success mb-0">Festava Live</h4>
+                    <div class="card-text text-dark">Landing Page</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img83.png" alt="Feature" />
+                </div>
+              </a></div>
+            <div class="col-lg-4 col-6 mb-3 item admin"><a class="text-decoration-none" href="https://demos.themeselection.com/materio-mui-react-nextjs-admin-template-free/" data-category="admin">
+                <div class="card mb-2 bg-white card-showcase">
+                  <div class="card-body text-center">
+                    <h4 class="card-title fw-bold text-success mb-0">Materio</h4>
+                    <div class="card-text text-dark">Admin &amp; DashBoard</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img01.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item business"><a class="text-decoration-none" href="https://themewagon.github.io/makan/" data-category="business">
@@ -129,30 +161,6 @@
                     <h4 class="card-title fw-bold text-success mb-0">Gohub</h4>
                     <div class="card-text text-dark">Travel &amp; Booking</div>
                   </div><img class="card-img-bottom" src="assets/img/template/img05.png" alt="Feature" />
-                </div>
-              </a></div>
-            <div class="col-lg-4 col-6 mb-3 item landing"><a class="text-decoration-none" href="https://themewagon.github.io/FitApp/" data-category="landing">
-                <div class="card mb-2 bg-white card-showcase">
-                  <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">FitApp</h4>
-                    <div class="card-text text-dark">Landing Pages</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img06.png" alt="Feature" />
-                </div>
-              </a></div>
-            <div class="col-lg-4 col-6 mb-3 item medical"><a class="text-decoration-none" href="https://themewagon.github.io/klinik/" data-category="medical">
-                <div class="card mb-2 bg-white card-showcase">
-                  <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">Klinik</h4>
-                    <div class="card-text text-dark">Medical &amp; Health Care</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img07.png" alt="Feature" />
-                </div>
-              </a></div>
-            <div class="col-lg-4 col-6 mb-3 item miscellaneous"><a class="text-decoration-none" href="https://themewagon.github.io/greenhost/" data-category="miscellaneous">
-                <div class="card mb-2 bg-white card-showcase">
-                  <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">GreenHost</h4>
-                    <div class="card-text text-dark">Miscellaneous</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img08.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item educational"><a class="text-decoration-none" href="https://themewagon.github.io/eduwell/" data-category="educational">
@@ -265,14 +273,6 @@
                     <h4 class="card-title fw-bold text-success mb-0">CakeZone</h4>
                     <div class="card-text text-dark">Food &amp; Restaurant</div>
                   </div><img class="card-img-bottom" src="assets/img/template/img20.png" alt="Feature" />
-                </div>
-              </a></div>
-            <div class="col-lg-4 col-6 mb-3 item miscellaneous"><a class="text-decoration-none" href="https://themewagon.github.io/productly/v1.0.0/" data-category="miscellaneous">
-                <div class="card mb-2 bg-white card-showcase">
-                  <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">Productly</h4>
-                    <div class="card-text text-dark">Miscellaneous</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img19.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item agency"><a class="text-decoration-none" href="https://themewagon.github.io/webuild/" data-category="agency">
@@ -715,14 +715,6 @@
                   </div><img class="card-img-bottom" src="assets/img/template/img82.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item landing"><a class="text-decoration-none" href="https://themewagon.github.io/FestavaLive/" data-category="landing">
-                <div class="card mb-2 bg-white card-showcase">
-                  <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">Festava Live</h4>
-                    <div class="card-text text-dark">Landing Page</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img83.png" alt="Feature" />
-                </div>
-              </a></div>
             <div class="col-lg-4 col-6 mb-3 item food"><a class="text-decoration-none" href="https://themewagon.github.io/fruitkha/" data-category="food">
                 <div class="card mb-2 bg-white card-showcase">
                   <div class="card-body text-center">
@@ -811,6 +803,14 @@
                   </div><img class="card-img-bottom" src="assets/img/template/img98.png" alt="Feature" />
                 </div>
               </a></div>
+            <div class="col-lg-4 col-6 mb-3 item miscellaneous"><a class="text-decoration-none" href="https://themewagon.github.io/greenhost/" data-category="miscellaneous">
+                <div class="card mb-2 bg-white card-showcase">
+                  <div class="card-body text-center">
+                    <h4 class="card-title fw-bold text-success mb-0">GreenHost</h4>
+                    <div class="card-text text-dark">Miscellaneous</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img08.png" alt="Feature" />
+                </div>
+              </a></div>
             <div class="col-lg-4 col-6 mb-3 item portfolio"><a class="text-decoration-none" href="https://technext.github.io/studio/" data-category="portfolio">
                 <div class="card mb-2 bg-white card-showcase">
                   <div class="card-body text-center">
@@ -819,12 +819,12 @@
                   </div><img class="card-img-bottom" src="assets/img/template/img99.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item miscellaneous"><a class="text-decoration-none" href="https://themewagon.github.io/Cycle/" data-category="miscellaneous">
+            <div class="col-lg-4 col-6 mb-3 item medical"><a class="text-decoration-none" href="https://themewagon.github.io/klinik/" data-category="medical">
                 <div class="card mb-2 bg-white card-showcase">
                   <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">Cycle</h4>
-                    <div class="card-text text-dark">Miscellaneous</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img95.png" alt="Feature" />
+                    <h4 class="card-title fw-bold text-success mb-0">Klinik</h4>
+                    <div class="card-text text-dark">Medical &amp; Health Care</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img07.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item agency"><a class="text-decoration-none" href="https://themewagon.github.io/GrowMark/" data-category="agency">
@@ -833,6 +833,14 @@
                     <h4 class="card-title fw-bold text-success mb-0">GrowMark</h4>
                     <div class="card-text text-dark">Agency</div>
                   </div><img class="card-img-bottom" src="assets/img/template/img92.png" alt="Feature" />
+                </div>
+              </a></div>
+            <div class="col-lg-4 col-6 mb-3 item landing"><a class="text-decoration-none" href="https://themewagon.github.io/FitApp/" data-category="landing">
+                <div class="card mb-2 bg-white card-showcase">
+                  <div class="card-body text-center">
+                    <h4 class="card-title fw-bold text-success mb-0">FitApp</h4>
+                    <div class="card-text text-dark">Landing Pages</div>
+                  </div><img class="card-img-bottom" src="assets/img/template/img06.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item landing"><a class="text-decoration-none" href="https://themewagon.github.io/PodTalk/" data-category="landing">
@@ -917,7 +925,7 @@
           <div class="container text-center pt-10 z-index-1 pb-3">
             <h1 class="mb-4 fw-bold text-white fs-10">Ready to get started?</h1>
             <p class="text-white fw-thin">
-              Get the entire collection in your box</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3 font-nunito fw-normal"></i>Download Free(25mb)</a>
+              Get the entire collection in your box</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5" href="https://themewagon.com/" target="_blank"><i class="fas fa-download me-3 font-nunito fw-normal"></i>Download Free(25mb)</a>
             <p class="mb-0 text-white mt-6 fs--1">Made with<span class="text-white fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
         </div><!-- end of .container-->
