download link added

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
           <div class="bg-holder  bottom-0" style="background-image:url(assets/img/hero/background.png);background-position: bottom;">
           </div>
           <div class="container overflow-hidden text-center pt-9 pb-10 z-index-1"><img class="mb-4" src="assets/img/hero/final.png" alt="" width="179.39px" /><br /><img src="assets/img/hero/100.png" alt="" width="901px" position="relative" />
-            <p class="text-white fw-semi-bold fs-11 font-nunito">HTML5 template collection <span class="text-info fw-bold">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 mb-5 font-nunito fw-normal" href="https://themewagon.com/" target="_blank"><i class="fas fa-download me-3"></i>Download Free(25mb)</a>
+            <p class="text-white fw-semi-bold fs-11 font-nunito">HTML5 template collection <span class="text-info fw-bold">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 mb-5 font-nunito fw-normal" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3"></i>Download Free(566mb)</a>
           </div>
           <!--/.bg-holder-->
 
@@ -539,14 +539,6 @@
                   </div><img class="card-img-bottom" src="assets/img/template/img56.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item landing"><a class="text-decoration-none" href="https://themewagon.github.io/motto/" data-category="landing">
-                <div class="card mb-2 bg-white card-showcase">
-                  <div class="card-body text-center">
-                    <h4 class="card-title fw-bold text-success mb-0">Motto</h4>
-                    <div class="card-text text-dark">Landing Pages</div>
-                  </div><img class="card-img-bottom" src="assets/img/template/img58.png" alt="Feature" />
-                </div>
-              </a></div>
             <div class="col-lg-4 col-6 mb-3 item miscellaneous"><a class="text-decoration-none" href="https://themewagon.github.io/KindHeart/" data-category="miscellaneous">
                 <div class="card mb-2 bg-white card-showcase">
                   <div class="card-body text-center">
@@ -925,7 +917,7 @@
           <div class="container text-center pt-10 z-index-1 pb-3">
             <h1 class="mb-4 fw-bold text-white fs-10">Ready to get started?</h1>
             <p class="text-white fw-thin">
-              Get the entire collection in your box</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5" href="https://themewagon.com/" target="_blank"><i class="fas fa-download me-3 font-nunito fw-normal"></i>Download Free(25mb)</a>
+              Get the entire collection in your box</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3 font-nunito fw-normal"></i>Download Free(566mb)</a>
             <p class="mb-0 text-white mt-6 fs--1">Made with<span class="text-white fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
         </div><!-- end of .container-->
