--- a/public/index.html
+++ b/public/index.html
@@ -56,19 +56,13 @@
         <div class="container-fluid ">
           <div class="bg-holder  bottom-0" style="background-image:url(assets/img/hero/background.png);background-position: bottom;">
           </div>
-<<<<<<< HEAD
-          <div class="container overflow-hidden text-center pt-9 pb-10 z-index-1"><img class="mb-4" src="assets/img/hero/final.png" alt="" width="179.39px" /><br /><img src="assets/img/hero/100.png" alt="" width="901px" position="relative" />
-            <p class="text-white fw-semi-bold fs-11 font-nunito">HTML5 template collection <span class="text-info fw-bold">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 mb-5 font-nunito fw-normal" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3"></i>Download Free(566mb)</a>
-=======
           <div class="container overflow-hidden text-center pb-9 z-index-1" style="padding-top: 105px;"><img class="mb-6" src="assets/img/hero/final.png" alt="" width="179.39px" />
-            <h1 class="d-flex text-white text-uppdercase font-big-shoulders align-items-center justify-content-center"><span class="title-100 me-2" style="font-size: 336px">100</span><span class="title-text ms-1" style="font-size: 140px"><span class="d-block">Pre-Build</span><span class="d-block">Websites</span></span></h1>
-            <p class="text-white fw-semi-bold fs-11 font-nunito d-flex justify-content-center me-n3">HTML5 template collection <span class="text-info fw-bold ms-2">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 font-nunito fw-normal"><i class="fas fa-download me-3"></i>Download Free(25mb)</a>
->>>>>>> design-update
+            <h1 class="mb-0 d-flex flex-column flex-sm-row text-white text-uppercase font-big-shoulders align-items-center justify-content-center hero-title"><span class="title-100 me-2 mb-3 mb-sm-0">100</span><span class="title-text ms-1"><span class="d-block">Pre-Build</span><span class="d-block">Websites</span></span></h1>
+            <p class="text-white fw-semi-bold fs-6 fs-sm-8 fs-lg-11 lh-1 font-nunito">HTML5 template collection <span class="text-info fw-bold ms-2">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 font-nunito fw-normal" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3"></i>Download Free(566mb)</a>
           </div>
           <!--/.bg-holder-->
 
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -903,8 +897,7 @@
                 </div>
               </a></div>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -932,8 +925,7 @@
               Get the entire collection in your box</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3 font-nunito fw-normal"></i>Download Free(566mb)</a>
             <p class="mb-0 text-white mt-6 fs--1">Made with<span class="text-white fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
-        </div>
-        <!-- end of .container-->
+        </div><!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
