--- a/v1.0.0/index.html
+++ b/v1.0.0/index.html
@@ -35,9 +35,10 @@
         <div class="bg-holder  bottom-0" style="background-image:url(undefined);background-image:linear-gradient(90deg, #FFFFFF -11.17%, #FFFFFF 110.39%);"></div><!--/.bg-holder-->
         <div class="container-fluid ">
           <div class="bg-holder  bottom-0" style="background-image:url(assets/img/hero/background.png);background-position: bottom;"></div>
-          <div class="container overflow-hidden text-center pb-9 z-index-1" style="padding-top: 105px;"><img class="mb-6" src="assets/img/hero/final.png" alt="" width="179.39px" />
-            <h1 class="mb-3 d-flex flex-column flex-sm-row text-white text-uppdercase font-big-shoulders align-items-center justify-content-center hero-title"><span class="title-100 me-2 mb-3 mb-sm-0">100</span><span class="title-text ms-1"><span class="d-block">Pre-Build</span><span class="d-block">Websites</span></span></h1>
-            <p class="text-white fw-semi-bold fs-6 fs-sm-8 fs-lg-11 font-nunito">HTML5 template collection <span class="text-info fw-bold ms-2">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 mb-5 font-nunito fw-normal" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3"></i>Download Free(566mb)</a>
+          <div class="container overflow-hidden text-center pb-9 z-index-1 banner-section"><img class="mb-4 mb-lg-6" src="assets/img/hero/final.png" alt="" width="179.39px" />
+            <h1 class="mb-0 flex-column flex-sm-row text-white text-uppercase font-big-shoulders align-items-center justify-content-center hero-title d-none d-lg-flex"><span class="title-100 me-2 mb-3 mb-sm-0">100</span><span class="title-text"><span class="d-block">Pre-Build</span><span class="title-text-2"> <span class="d-block">Websites</span></span></span></h1>
+            <h1 class="text-white text-uppercase fs-8 d-lg-none font-big-shoulders fw-black fs-sm-10">100 Pre-build Websites</h1>
+            <p class="text-white fw-semi-bold fs-5 fs-sm-6 fs-lg-9 fs-xl-11 lh-1 font-nunito me-n3">HTML5 template collection <span class="text-info fw-bold ms-2">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 font-nunito fw-normal" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3"></i>Download Free(566mb)</a>
           </div><!--/.bg-holder-->
         </div><!-- end of .container-->
       </section><!-- <section> close ============================--><!-- ============================================-->
