--- a/v1.0.0/index.html
+++ b/v1.0.0/index.html
@@ -38,7 +38,7 @@
           <div class="container overflow-hidden text-center pb-9 z-index-1 banner-section"><img class="mb-4 mb-lg-6" src="assets/img/hero/final.png" alt="" width="179.39px" />
             <h1 class="mb-0 flex-column flex-sm-row text-white text-uppercase font-big-shoulders align-items-center justify-content-center hero-title d-none d-lg-flex"><span class="title-100 me-2 mb-3 mb-sm-0">100</span><span class="title-text"><span class="d-block">Pre-Build</span><span class="title-text-2"> <span class="d-block">Websites</span></span></span></h1>
             <h1 class="text-white text-uppercase fs-8 d-lg-none font-big-shoulders fw-black fs-sm-10">100 Pre-build Websites</h1>
-            <p class="text-white fw-semi-bold fs-5 fs-sm-6 fs-lg-9 fs-xl-11 lh-1 font-nunito me-n3">HTML5 template collection <span class="text-info fw-bold ms-2">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 font-nunito fw-normal" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3"></i>Download Free(566mb)</a>
+            <p class="text-white fw-semi-bold fs-5 fs-sm-6 fs-lg-9 fs-xl-11 lh-1 font-nunito me-n3">HTML5 template collection <span class="text-info fw-bold ms-2">2023</span></p><a class="text-white btn btn-success mt-3 mt-lg-6 font-nunito fw-normal" href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank"><i class="fas fa-download me-3"></i>Download Free(566mb)</a>
           </div><!--/.bg-holder-->
         </div><!-- end of .container-->
       </section><!-- <section> close ============================--><!-- ============================================-->
@@ -881,7 +881,7 @@
           <div class="bg-holder  bottom-0" style="background-image:url(assets/img/footer/footer.png);background-position: top;"></div><!--/.bg-holder-->
           <div class="container text-center pt-10 z-index-1 pb-3">
             <h1 class="mb-4 fw-bold text-white fs-10">Ready to get started?</h1>
-            <p class="text-white fw-thin"> Get the entire collection in your box</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5" href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank"><i class="fas fa-download me-3 font-nunito fw-normal"></i>Download Free(566mb)</a>
+            <p class="text-white fw-thin"> Get the entire collection in your box</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5" href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank"><i class="fas fa-download me-3 font-nunito fw-normal"></i>Download Free(566mb)</a>
             <p class="mb-0 text-white mt-6 fs--1">Made with<span class="text-white fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
         </div><!-- end of .container-->
